--- a/_posts/2022-08-09-PQ-台大認定抄襲將撤銷學位-林智堅-對我有利的事證卻拒絕採納.html
+++ b/_posts/2022-08-09-PQ-台大認定抄襲將撤銷學位-林智堅-對我有利的事證卻拒絕採納.html
@@ -24,7 +24,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793.jpeg" alt="" class="wp-image-110591" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793-300x209.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793-768x535.jpeg 768w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>台大9日上午召開記者會，社會科學院院長蘇宏達（圖）指出，學術倫理審定委員會決議，林智堅抄襲余正煌碩士論文且情節嚴重，建議撤銷林智堅碩士學位。<br>（圖／中央社記者郭日曉攝）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793.jpeg" alt="" class="wp-image-110591" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793-300x209.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ce3d80e8-1103x768_524635722793-768x535.jpeg 768w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>台大9日上午召開記者會，社會科學院院長蘇宏達（圖）指出，學術倫理審定委員會決議，林智堅抄襲余正煌碩士論文且情節嚴重，建議撤銷林智堅碩士學位。<br>（圖／中央社記者郭日曉攝）</figcaption></figure></div>
 
 
 
