Update VOCUS 2022-08-10 patch

--- a/_posts/2022-08-09-VOCUS-全面失控-1999胡士托音樂節-人造災難.html
+++ b/_posts/2022-08-09-VOCUS-全面失控-1999胡士托音樂節-人造災難.html
@@ -48,4 +48,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/d55c8393-af71-4c00-a69f-8417419884ac.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">我認為1999年的胡士托音樂節雖然被稱為：最臭名昭著的演唱會活動之一。但以表演和現場的氣氛帶動來說，它還是別具魅力的，雖然紀錄片說了很多現場不堪的事情，但卻沒有否認表演精彩度和樂迷的激情。而唯一絕大的部份的責任還是在於主辦方的吃相難看的貪婪，與聽眾素質需要被培養。</div>
 <div class="draft-block draft--p left">也許未來哪一天胡士托音樂節又捲土重來，希望到時候是那個與1969年一樣，充滿愛與和平，對未來有希望的年輕人看著星空、聽著音樂和喝著啤酒的音樂美事。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Tm5uUzbUwR4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Tm5uUzbUwR4"></iframe></div>
