--- a/_posts/2022-08-09-PQ-衛星拍到中國在新疆建造核子試爆用-第六隧道.html
+++ b/_posts/2022-08-09-PQ-衛星拍到中國在新疆建造核子試爆用-第六隧道.html
@@ -21,7 +21,7 @@ author: 蔡侯塞
 
 
 <figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Satellite images show China digs sixth tunnel in Xinjiang, likely for nuclear tests" src="https://www.youtube.com/embed/RnOJru8iF5Y?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="Satellite images show China digs sixth tunnel in Xinjiang, likely for nuclear tests" src="https://www.youtube.com/embed/RnOJru8iF5Y?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>多張衛星照片顯示中國人民解放軍在新疆維吾爾自治區發展核子武器及測試設施<br>影片／Spotlight on China</figcaption></figure>
 
 
