--- a/_posts/2022-08-09-INMEDIA-理大圍城-涉油麻地暴動9人不認罪受審-控方指被告非居案發地點-沒理由前往.html
+++ b/_posts/2022-08-09-INMEDIA-理大圍城-涉油麻地暴動9人不認罪受審-控方指被告非居案發地點-沒理由前往.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p><strong>當晚四名警員受傷 其中三人被電油滑倒</strong></p>
 <p>控方指，警方其後搜查封鎖區，發現港鐵油麻地站A1出口附近有大量遭棄置物資，包括防毒面具和雨傘等，窩打老道馬路亦佈滿磚頭、渠蓋被打開、地鐵站外牆被噴示威字句。控方指，當晚有四名警員受傷，其中三人被地上汽油滑倒，另一人制服其中一名示威者時被玻璃碎片割傷。</p>
 <p><strong>控方指第14被告曾乘往返富享至佐敦巴士</strong></p>
-<p>控方指，被告被捕時均沒有八達通在身，經追查後發現其中第14被告宋博通的八達通曾乘搭往返富享至佐敦的271X巴士。控方終認為，案發數天前已發生理大事件，政府數日間不斷警告不要到有關地點；加上各被告並非居於案發附近，而當日有關地點亦非日常生活狀態，包括交通、商店沒有運作，因此認為被告沒有其他前往理由，唯一原因是參與涉案暴動。</p>
+<p>控方指，被告被捕時均沒有八達通在身，經追查後發現其中第14被告宋博通的八達通曾乘搭往返富亨至佐敦的271X巴士。控方終認為，案發數天前已發生理大事件，政府數日間不斷警告不要到有關地點；加上各被告並非居於案發附近，而當日有關地點亦非日常生活狀態，包括交通、商店沒有運作，因此認為被告沒有其他前往理由，唯一原因是參與涉案暴動。</p>
 <p>案件明天續審。</p>
 <p>10名被告依次為：黃權龍（23歲）、高晞朗（18歲）、林君悅（18歲）、林子浩（31歲）、李沛翹（26歲）、馬奕熙（20歲）、彭大展（26歲）、宋博通（21歲）、鄧永明（23歲）和董浩霖（24歲）。他們同被控於2019年11月18日，在窩打老道至咸美頓街之間的彌敦道一帶，連同身份不詳的人參與暴動。</p>
 <p>第六被告林君悅昨（8日）承認控罪，獲准保釋至9月2日，直至餘下9名被告審訊完成後判刑。</p>
