--- a/_posts/2022-08-10-INMEDIA-田北俊等三自由黨元老退黨-不滿獨行獨斷取消榮譽主席職銜.html
+++ b/_posts/2022-08-10-INMEDIA-田北俊等三自由黨元老退黨-不滿獨行獨斷取消榮譽主席職銜.html
@@ -17,8 +17,9 @@ author: 獨媒報導
 <p><strong>周梁淑怡：處理手法絕對稱不上有情有義</strong></p>
 <p>周梁淑怡亦有去信邵家輝，指對黨廢除榮譽主席的處理手法非常失望，「絕對稱不上有情有義」。她形容，中央委員會「精心部置」取消榮譽主席職銜，強調任何有關黨的未來改革，只要對黨的發展有利，都應該討論和考慮。</p>
 <p>周梁又批評邵家輝的處理手法獨行獨斷，完全沒有和當事人商討，或徵詢過現任榮譽主席們的意見，「連對主題和有關人士的最基本的尊重都沒有」，感到被嚴重冒犯。</p>
+<p>自由黨傍晚發聲明指，有意見認為「榮譽主席」的安排有檢討需要，黨團會議在今年年初已作多次討論，及在兩次常委會深入討論和商議後，將方案交到中委會，方案今日獲中委會投票一致通過。自由黨最後表示，感謝田北俊、周梁淑怡、劉健儀和方剛多年來的貢獻。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/76w1cy8b98" title="IMG_0777"><img src="https://live.staticflickr.com/65535/51757631042_312b91fbd0_b.jpg" width="1024" alt="IMG_0777" /></a></p>
 <p><strong>去年立選個人身份撐潘焯鴻  自由黨即割蓆</strong></p>
-<p>在去年立法會換屆選舉，田北俊、周梁淑怡及劉健儀曾以「個人身份」簽署「個人支持同意書」， 給予參選港島東地區直選的<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E3%80%90%E7%AB%8B%E6%9C%83%E9%81%B8%E6%88%B0%E3%80%91%E4%BD%99%E5%BE%B7%E5%AF%B6%E6%92%90%E6%BD%98%E7%84%AF%E9%B4%BB%EF%BC%9A%E5%BE%97%E4%BD%A2%E6%90%B5%E6%88%91%EF%BC%8C%E4%BA%A6%E6%94%AF%E6%8C%81%E5%BE%97%E8%90%BD%E6%89%8B">潘焯鴻</a>。</p>
-<p>自由黨立刻割蓆，發聲明澄清指，三名榮譽主席的舉措屬個人行為，事前並未經黨團或常委會討論， 更不代表自由黨的立場，並強調潘焯鴻為「自由黨不支持的地區直選候選人」。</p>
+<p>在去年立法會換屆選舉，周梁淑怡及劉健儀曾以「個人身份」簽署「個人支持同意書」， 給予參選港島東地區直選的<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E3%80%90%E7%AB%8B%E6%9C%83%E9%81%B8%E6%88%B0%E3%80%91%E4%BD%99%E5%BE%B7%E5%AF%B6%E6%92%90%E6%BD%98%E7%84%AF%E9%B4%BB%EF%BC%9A%E5%BE%97%E4%BD%A2%E6%90%B5%E6%88%91%EF%BC%8C%E4%BA%A6%E6%94%AF%E6%8C%81%E5%BE%97%E8%90%BD%E6%89%8B">潘焯鴻</a>。</p>
+<p>自由黨立刻割蓆，發聲明澄清指，榮譽主席的舉措屬個人行為，事前並未經黨團或常委會討論， 更不代表自由黨的立場，並強調潘焯鴻為「自由黨不支持的地區直選候選人」。</p>
 </div></div></div>
