--- a/_posts/2022-08-10-INITIUM-早报-中国metoo弦子诉朱军案上诉失败-弦子法庭陈述拷问司法正义.html
+++ b/_posts/2022-08-10-INITIUM-早报-中国metoo弦子诉朱军案上诉失败-弦子法庭陈述拷问司法正义.html
@@ -10,7 +10,7 @@ author:
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220811-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2020/12/9223e8c65d8f45b885809fe214b0e892.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2020年12月2日，北京，弦子诉朱军性骚扰案首次开庭。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">2020年12月2日，北京，弦子诉朱军性骚扰案首次开庭。<span class="credit">摄：Florence Lo/Reuters</span></figcaption></figure><h3>中国Metoo弦子诉朱军案上诉失败，弦子法庭陈述拷问司法正义</h3>
-<p><a href="https://ent.sina.com.cn/s/m/2022-08-10/doc-imizmscv5674163.shtml">北京市第一中级法院昨日裁定</a>，前中央电视台女实习生弦子诉央视著名主持人朱军一般人格权纠纷案二审维持原判。</p>
+<p><a href="https://ent.sina.com.cn/s/m/2022-08-10/doc-imizmscv5674163.shtml">北京市第一中级法院昨日裁定</a>，前中央电视台实习生弦子诉央视著名主持人朱军一般人格权纠纷案二审维持原判。</p>
 <p>法院认为，上诉人弦子提交的证据不足以证明朱军对她实施性骚扰行为，上诉请求不成立。</p>
 <p>现年29岁的弦子于2018年起诉朱军，指控他在2014年对还是央视实习生的她性骚扰。此案成为中国Metoo运动的标志性案件。</p>
 <p>2020年12月，北京海淀区法院首次开庭，庭审超过10小时至午夜结束。弦子一方争取到休庭，并提出若干诉求，包括申请增设人民陪审员，案件公开审理，朱军本人出庭。后来这些申请均未被批准。</p>
