--- a/_posts/2022-08-10-INMEDIA-電檢處要求刪半秒傘運畫面-稱重現非法佔領行動-金馬得獎短片-暗房夜空-取消放映.html
+++ b/_posts/2022-08-10-INMEDIA-電檢處要求刪半秒傘運畫面-稱重現非法佔領行動-金馬得獎短片-暗房夜空-取消放映.html
@@ -8,14 +8,14 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/2022081002.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>以同志青年為題材、曾獲金馬獎最佳動畫短片的本地作品《暗房夜空》，原定本周日在「第一屆平地影像共學計劃」放映，惟遭電檢處要求刪走一幕不足一秒、出現「毋忘初衷」及「我要⋯⋯」字眼、影射雨傘運動的畫面，處方指畫面「重現了非法佔領行動的情況」。由於製作團隊拒應要求刪剪片段，故該片實體放映取消，團隊表示：「我地嘅感受就係真係一兩秒嘅畫面嚟啫😅😂。」動畫全片現仍可於香港都會大學YouTube頻道<a href="https://www.youtube.com/watch?v=EHNrgt94cs4">瀏覽</a>。</p>
+<img src="https://www.inmediahk.net/files/column_images/2022081002.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>以同志青年為題材、曾獲金馬獎最佳動畫短片的本地作品《暗房夜空》，原定本周日在「第一屆平地影像共學計劃」放映，惟遭電檢處要求刪走一幕不足一秒、出現「毋忘初衷」及「我要⋯⋯」字眼、影射雨傘運動的畫面，處方指畫面「重現了非法佔領行動的情況」。由於製作團隊拒應要求刪剪片段，故該片實體放映取消，團隊表示：「我地嘅感受就係真係一兩秒嘅畫面嚟啫😅😂。」動畫全片現仍可於香港都會大學YouTube頻道<a href="https://www.youtube.com/watch?v=EHNrgt94cs4">瀏覽</a>。<font color="#0000FF">（8月11日更新：影片已被設定為「私人」，無法觀看）</font></p>
 <p><strong>曾獲金馬獎最佳動畫短片 2017年上映</strong></p>
 <p>《暗房夜空》片長約7分半鐘，講述香港一名投身同志運動的青年，在社會遭受的挫折和無力感，盼讓觀眾重新認識性小眾。</p>
 <p>動畫由香港公開大學（現為香港都會大學）動畫及視覺特效系的3名學生創作，為3人畢業作品。短片2017年在香港上映，其後獲第54屆金馬獎最佳動畫短片，為首部獲此殊榮的香港動畫，隨後兩年亦曾在平地映社的活動作公開放映。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/W930X75D7o" title="296946070_2271528206332967_2298616641354769447_n"><img src="https://live.staticflickr.com/65535/52276621893_4303e3e146_c.jpg" alt="296946070_2271528206332967_2298616641354769447_n" /></a><br /><em>《暗房夜空》劇照</em></p>
 <p><strong>電檢處要求刪傘運畫面 稱重現「非法佔領行動」</strong></p>
 <p>《暗房夜空》原定於本周末進行、由平地映社學員策劃的「第一屆平地影像共學計劃 - 放映活動： 在________發吽哣」舉行放映，惟主辦方今午遺憾<a href="https://www.facebook.com/GroundUpSFF/videos/475349117349976">宣布</a>，由於電影、報刊及物品管理辦事處「不允許該作品以完整版本上映」，而「該作品導演與我們均不會放映經過刪剪的版本」，故《暗房夜空》實體放映將被取消。主辦方指節目內其他作品將如期放映，會安排退票。</p>
-<p>平地映社晚上回覆《獨媒》查詢，表示動畫於7月11日送檢，昨天收到電檢處回覆，要求刪減片中少於一秒的畫面，指畫面重現了「非法佔領行動」的情況。平地映社引電檢處指，若團隊不刪去指定片段，則無法取得2A電影評級，亦不會獲發核准證明書，不能作任何公開放映。而電檢處於回覆中亦引用《電影檢查條例》第10條（2）（3）的內容，當中包括考慮影片上映「是否會不利於國家安全」。</p>
+<p>平地映社晚上回覆《獨媒》查詢，表示動畫於7月11日送檢，昨天收到電檢處回覆，要求刪減片中少於一秒的畫面，指畫面重現了「非法佔領行動」的情況。平地映社引電檢處指，若團隊不刪去指定片段，則無法取得2A電影評級，亦不會獲發核准證明書，不能作任何公開放映。而電檢處於回覆中亦引用《電影檢查條例》第10條（2）（3）的內容，當中考慮因素包括「該影片的上映是否會不利於國家安全」。</p>
 <p>平地映社指，由於製作團隊決定不會接受電檢處要求刪剪任何片段，故《暗房夜空》實體放映將取消。</p>
 <p>據了解，電檢處要求刪走的片段，為一幕僅出現約半秒、影射2014年雨傘運動的場景，畫面出現不同顏色的帳篷、「毋忘初衷」，及畫上雨傘、黃色底的「我要⋯⋯」橫額，可聯想到「我要真普選」字眼。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/03f8918rNJ" title="螢幕快照 2022-08-10 下午9.12.41 拷貝"><img src="https://live.staticflickr.com/65535/52275624187_4714a89aed_c.jpg" width="800" alt="螢幕快照 2022-08-10 下午9.12.41 拷貝" /></a></p>
