--- a/_posts/2022-08-11-PQ-救國團工會上街爭權益-黨產會-不當財產仍須歸還國家.html
+++ b/_posts/2022-08-11-PQ-救國團工會上街爭權益-黨產會-不當財產仍須歸還國家.html
@@ -20,7 +20,7 @@ author: 楊是命
 
 
 
-<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041.jpeg" alt="" class="wp-image-110865" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041-300x222.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041-768x569.jpeg 768w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>救國團企業工會11日走上街頭前往黨產會陳情，表達救國團員工不想被解雇，希望黨產會能給員工安心工作的權利。<br>（圖／中央社記者謝佳璋攝）</figcaption></figure></div>
+<div class="wp-block-image is-style-default"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041.jpeg" alt="" class="wp-image-110865" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041-300x222.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/e0393857-1038x768_20220811000041-768x569.jpeg 768w" sizes="(max-width: 768px) 100vw, 768px" /><figcaption>救國團企業工會11日走上街頭前往黨產會陳情，表達救國團員工不想被解雇，希望黨產會能給員工安心工作的權利。<br>（圖／中央社記者謝佳璋攝）</figcaption></figure></div>
 
 
 
