--- a/_posts/2022-08-12-PQ-控南韓用美鈔-傳單等髒東西讓北韓染疫-北韓-必採強烈報復.html
+++ b/_posts/2022-08-12-PQ-控南韓用美鈔-傳單等髒東西讓北韓染疫-北韓-必採強烈報復.html
@@ -24,7 +24,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604.jpg" alt="" class="wp-image-110907" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604.jpg 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604-768x511.jpg 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>朝鮮勞動黨副部長金與正指控南韓把病毒傳入北韓<br>（圖／朝中社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604.jpg" alt="" class="wp-image-110907" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604.jpg 900w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/ed422433-pic0069604-768x511.jpg 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>朝鮮勞動黨副部長金與正指控南韓把病毒傳入北韓<br>（圖／朝中社）</figcaption></figure></div>
 
 
 
