Update VOCUS 2022-08-13 patch

--- a/_posts/2022-08-12-VOCUS-貓往西走-如果空間會流動的話....html
+++ b/_posts/2022-08-12-VOCUS-貓往西走-如果空間會流動的話....html
@@ -41,4 +41,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/5459febe-c392-4c95-a003-8c8c87b3468c.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">但《貓往西走》其實有很多問題，第一是書名其實就跟浮流沒有太大的關係，會讓人搞不清楚漫畫的走向，再來是解決問題雖然有趣，但比起《蟲師》或是《水域》等，粉絲喜愛的虛實交錯的奇幻作品風格，《貓往西走》其實更偏向有點現實搞笑的成分，故有時候反而有些太平淡了。</div>
 <div class="draft-block draft--p left">在最後結尾故事也平淡的結束，並且因為人物個性較為悠哉劇情也以搞笑和有趣的日常為主題，導致《貓往西走》漫畫風格其實印象沒有太過深刻之處，但這並不是缺點，而是這次作者似乎就只是想畫一部貓跟懷舊老街相關的故事，而經由這些想到浮流這個點子，某方面作者腦子也算是相當奇幻吧？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/qv3Jtu3QVkU"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/qv3Jtu3QVkU"></iframe></div>
