--- a/_posts/2022-08-12-PQ-中國拿文在寅-三不一限-反薩德防禦系統-尹錫悅政府-國安問題不能協議.html
+++ b/_posts/2022-08-12-PQ-中國拿文在寅-三不一限-反薩德防禦系統-尹錫悅政府-國安問題不能協議.html
@@ -16,11 +16,11 @@ author: 陳怡菱
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-1024x683.jpg" alt="韓國外交部長康京和 Kang_Kyung-wha（圖／UN Geneva／CC BY-NC-ND 2.0）" class="wp-image-41294" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>韓國前外交部長康京和<br>（圖／UN Geneva／CC BY-NC-ND 2.0）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-1024x683.jpg" alt="韓國外交部長康京和 Kang_Kyung-wha（圖／UN Geneva／CC BY-NC-ND 2.0）" class="wp-image-41294" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2020/10/7bb3d62f-韓國外交部長康京和-kang_kyung-wha（圖／un-geneva／cc-by-nc-nd-2.0）.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>韓國前外交部長康京和<br>（圖／UN Geneva／CC BY-NC-ND 2.0）</figcaption></figure></div>
 
 
 
-<p>文在寅政府雖然主張「三不不是約定也不是協議，只是在表明立場」，但中國將「三不」視為「文在寅政府的正式承諾」，一直要求韓國兌現承諾。<strong>「一限」是指限制韓國運用部署在駐韓美軍基地的薩德系統</strong>，以往只有中國官媒用過幾次，這次是中國政府首次在官方提到這個詞。可以解釋成中國要求尹錫悅政府暫停成立後立即開始的薩德正常化動作。</p>
+<p>文在寅政府雖然主張「三不不是承諾也不是協議，只是在表明立場」，但中國將「三不」視為「文在寅政府的正式承諾」，一直要求韓國兌現承諾。<strong>「一限」是指限制韓國運用部署在駐韓美軍基地的薩德系統</strong>，以往只有中國官媒用過幾次，這次是中國政府首次在官方提到這個詞。可以解釋成中國要求尹錫悅政府暫停成立後立即開始的薩德正常化動作。</p>
 
 
 
@@ -44,7 +44,7 @@ author: 陳怡菱
 
 
 
-<p>對此，韓國外交部長朴振則斬釘截鐵地表示「薩德對韓國安保主權有直接關聯。三部並不是共識或承諾。」朴振還說「希望中國在鼓勵北韓選擇對話而不是挑釁方面發揮建設性作用。」對中國沒有執著在「薩德三不」，而是要求傾力在北韓去核化。</p>
+<p>對此，韓國外交部長朴振則斬釘截鐵地表示「薩德對韓國安保主權有直接關聯。三不並不是共識或承諾。」朴振還說「希望中國在鼓勵北韓選擇對話而不是挑釁方面發揮建設性作用。」對中國沒有執著在「薩德三不」，而是要求傾力在北韓去核化。</p>
 
 
 
@@ -96,7 +96,7 @@ author: 陳怡菱
 
 
 
-<p>在 11 日的記者會上，被問到對於中國主張所謂「三不一限」的立場，總統辦公室的高層表示「<strong>薩德是為了守護人民生命安全免於受到北韓核武飛彈攻擊的自我防衛手段，是國安主權事項絕對不是可以協商的對象</strong>。」</p>
+<p>在 11 日的記者會上，被問到對於中國主張所謂「三不一限」的立場，韓國總統辦公室的高層表示「<strong>薩德是為了守護人民生命安全免於受到北韓核武飛彈攻擊的自我防衛手段，是國安主權事項絕對不是可以協商的對象</strong>。」</p>
 
 
 
