--- a/_posts/2022-08-12-PQ-比電影-寄生上流-還悲慘-豪雨沖出首爾-半地下-窮人的慘境.html
+++ b/_posts/2022-08-12-PQ-比電影-寄生上流-還悲慘-豪雨沖出首爾-半地下-窮人的慘境.html
@@ -29,7 +29,7 @@ author: 林貝利
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="MAJOR Floods Hit Seoul, South Korea - Aug. 8, 2022 서울의 홍수" src="https://www.youtube.com/embed/3-J2J8sJuxk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="MAJOR Floods Hit Seoul, South Korea - Aug. 8, 2022 서울의 홍수" src="https://www.youtube.com/embed/3-J2J8sJuxk?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div></figure>
 
 
