--- a/_posts/2022-08-12-INITIUM-再访艾力克-菲耶-法国小说家看见怎样的台湾.html
+++ b/_posts/2022-08-12-INITIUM-再访艾力克-菲耶-法国小说家看见怎样的台湾.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 再访艾力克．菲耶：法国小说家看见怎样的台湾
+title: 再访艾力克·菲耶：法国小说家看见怎样的台湾
 date: 2022-08-12 18:28:00.000000000 +00:00
 link: https://theinitium.com/article/20220813-culture-french-writer-in-taiwan-eric-faye/
 categories: initium
@@ -9,7 +9,7 @@ author: 特约撰稿人 朱嘉汉 发自台北
 ---
 
 <p>「“我们都需要故事，或许比任何的时代都需要。虽然现在的媒介与娱乐很多，不过背后的欲望都是一样的。”」</p><p>特约撰稿人 朱嘉汉 发自台北</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20220813-culture-french-writer-in-taiwan-eric-faye/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/23df9713ea724e10922e492ca3f22121.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="法国作家艾力克．菲耶（Éric Faye)。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">法国作家艾力克．菲耶（Éric Faye)。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p>​相约在六月底的下午，温州街一间林荫下的餐酒馆。我抵达的时候，来自法国的作家艾力克．菲耶（Éric Faye）已经坐在那里。曾在2019年<a href="https://theinitium.com/article/20190302-culture-ericfaye-in-taipei/">访问过菲耶</a>，这一次见面，我问先到了的他如何过来，他说用走的，从邀请他来驻村的台北宝藏岩国际艺术村一路散步过来。这答案并不意外。<br><br>我随意聊起法文口语里，传达能够顺利运行，会用“步行”这个动词构成的短句“ça marche”。这样的表述，中文也有类似的：“可行”。他听了觉得有趣，咀嚼了一下。<br><br>他点了这间店比较少人点的espresso（因此不在菜单上），问他台北印象。他笑了笑，觉得问题不太具体，最后玩笑说，各种特色咖啡厅很多，不过咖啡上桌的速度很慢。<br><br>​菲耶在五月初来台，恰逢台湾疫情控制了两年终于面临高峰的时期，他说疫情也是种时差。我问他这时差是否是一种“质地”的概念，而不是单纯的数字。他立刻说是。他说，旅行或工作于世界各地，调整时差，感受时差的时候，转换的，进入另一个世界的时间，体内仍有一个极小的部分还是保留著原来的时间。<br><br>我问这是否像是两个不同大小的齿轮咬合。他说也许，这么多年来他已经搜集了很多大小不一的齿轮，可以像个钟表匠一样思考了。</p>
+            <figcaption itemprop="caption">法国作家艾力克．菲耶（Éric Faye)。<span class="credit">摄：陈焯煇/端传媒</span></figcaption></figure><p>​相约在六月底的下午，温州街一间林荫下的餐酒馆。我抵达的时候，来自法国的作家艾力克·菲耶（Éric Faye）已经坐在那里。曾在2019年<a href="https://theinitium.com/article/20190302-culture-ericfaye-in-taipei/">访问过菲耶</a>，这一次见面，我问先到了的他如何过来，他说用走的，从邀请他来驻村的台北宝藏岩国际艺术村一路散步过来。这答案并不意外。<br><br>我随意聊起法文口语里，传达能够顺利运行，会用“步行”这个动词构成的短句“ça marche”。这样的表述，中文也有类似的：“可行”。他听了觉得有趣，咀嚼了一下。<br><br>他点了这间店比较少人点的espresso（因此不在菜单上），问他台北印象。他笑了笑，觉得问题不太具体，最后玩笑说，各种特色咖啡厅很多，不过咖啡上桌的速度很慢。<br><br>​菲耶在五月初来台，恰逢台湾疫情控制了两年终于面临高峰的时期，他说疫情也是种时差。我问他这时差是否是一种“质地”的概念，而不是单纯的数字。他立刻说是。他说，旅行或工作于世界各地，调整时差，感受时差的时候，转换的，进入另一个世界的时间，体内仍有一个极小的部分还是保留著原来的时间。<br><br>我问这是否像是两个不同大小的齿轮咬合。他说也许，这么多年来他已经搜集了很多大小不一的齿轮，可以像个钟表匠一样思考了。</p>
 <p><small>艾力克．菲耶（Éric Faye），1963年生，路透社记者，1991年出版第一本散文集。出版散文及小说作品十余部，包括《三境边界秘话》、《巴黎》、《长崎》、《日人之蚀》等。2010年小说《长崎》获法兰西学术院小说大奖。2022年春夏之交，菲耶以驻村计划来台三个月，希望创作一本小说，以“故宫文物如何迁台”切入两岸议题；另一本类纪行体，记录每日在台所感所想所遇。</small></p>
 <p>​一个月前，我与菲耶、作东道的卫城出版总编惠菁曾有一次小聚。当时，刚隔离出来的他，一边安慰我们正在攀高的确诊数并不可怕，也一一告诉我们他的计划。除了来台前就预告过的，参加今年在夏季举行的书展与他的小说田野之外，短短两个月中，他会去兰屿、台南与马祖。</p>
 <p>​一个月后，菲耶当时说的每个行程全都依照计划完成了。</p>
@@ -83,6 +83,8 @@ author: 特约撰稿人 朱嘉汉 发自台北
 ​</p><p>文化的差异，书写的可能</p><p>
 </p><p>这也是他的文学构想，就是在一种移动、换位间，在现实与想像间，在不断的思索、观察中，慢慢产生。</p>
 <p></p><p>​“相对于台湾，法国人虽然很自豪自己的历史与文化，但没有那么多样性。”</p><p>​针对这点，我提出疑问。既然整个欧洲是如此的多样性，而法国本身每个地域都有不同的传统特色，怎么会单一呢？</p><p>​菲耶则说，以他的看法，在十九世纪前或许是的，法国曾经非常的多元。但后来在国家的力量与制度下，所有的一切都同化为“法国”。相对的，他在台湾看得到某种多元性的力量在。但他也承认，这也许是他来自西方的观点，看到的面向并不相同。</p><p>​谈到这里，恰好我帮菲耶点的荔枝磅蛋糕上桌，我顺道解释荔枝的渊源，以及法国的甜点师如何用荔枝、玫瑰、覆盆子制作出令人难以忘怀的口味。也一并聊了东方的香料与收藏品等，当初给予欧洲贵族们多大的遐想。</p><p>​那么相当丰富的东亚旅居经验的菲耶眼中，是怎么看待“东/西”这种被形塑已久的对立的？</p><p>​对此，菲耶给了一个相当有趣的答案：</p><p>​“我相信过去东西方的差异真的对欧洲人的心灵冲击非常大。我的祖父是一名水手，他大约在二十世纪初造访过东方，也到过日本。对当时的他来说那是充满神秘与魅力的异国。今天我们当然有很明显的语言差异，但都是在一种全面性的全球化、现代化的生活中。譬如智慧型手机与低头看手机的人，这些都是普遍的现象了。差异当然还在，但很多的差异在表面上都已经丢失了，只有到比较深处的地方才能看出社会性的、文化性的根本差异。”</p><p>​但或许，在差异的深处，又能找到普同性？</p><p>​菲耶说是的，这也是他的文学构想，就是在一种移动、换位间，在现实与想像间，在不断的思索、观察中，慢慢产生。</p><p><a class="image" href="https://theinitium.com/article/20220813-culture-french-writer-in-taiwan-eric-faye/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/08/c8b62f0bec7d4f9b8b01a6d6196b7baa.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="法国作家艾力克．菲耶（Éric Faye)。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-</p><figcaption itemprop="caption">法国作家艾力克．菲耶（Éric Faye)。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>我们都需要故事</p><p>​>“我们都需要故事，或许比任何的时代都需要。虽然现在的媒介与娱乐很多，不过背后的欲望都是一样的。”</p><p>​两个多月的台北驻村，对菲耶来说是“刚刚好”。可以感受到短暂旅行所不能静心体会的细节，他透露十一月时会再度来台。配合一个纪录片的计划之外，也是自己想再度造访。上次造访，是为了2019书展，这回等到了能够驻村，恰好又是一次书展，也可能是唯一一次在初夏的书展。两次相隔的不只是时间，还有改变世界的疫情。</p><p>​不过，菲耶说，这回的台北书展，场地虽然看起来比较空旷，读者的热情却没有减少。对他而言还是相当美好书展经验。
+</p><figcaption itemprop="caption">法国作家艾力克．菲耶（Éric Faye)。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>我们都需要故事</p><p>
+</p><p>​“我们都需要故事，或许比任何的时代都需要。虽然现在的媒介与娱乐很多，不过背后的欲望都是一样的。”</p>
+<p></p><p>​两个多月的台北驻村，对菲耶来说是“刚刚好”。可以感受到短暂旅行所不能静心体会的细节，他透露十一月时会再度来台。配合一个纪录片的计划之外，也是自己想再度造访。上次造访，是为了2019书展，这回等到了能够驻村，恰好又是一次书展，也可能是唯一一次在初夏的书展。两次相隔的不只是时间，还有改变世界的疫情。</p><p>​不过，菲耶说，这回的台北书展，场地虽然看起来比较空旷，读者的热情却没有减少。对他而言还是相当美好书展经验。
 ​
 “在法国，作家不太会有机会跟他们的读者交流，我指的是大约五十人以下，在一个可以清楚看见彼此的空间，可以好好说些事情，也能够听读者提问的场合。尤其是巴黎，因为活动太多了，不太有类似的活动。”</p><p>​这也是他自疫情以来，第一次能够以作家的身份在书展与读者碰面。</p><p>​“我们都需要故事，或许比任何的时代都需要。虽然现在的媒介与娱乐很多，不过背后的欲望都是一样的。”</p><p>​但小说呢？</p><p>​“一样的。我们会有读文字、小说的欲望的。”他肯定的说。</p><p>​结束访谈后，我问他要去哪里，他说散散步，用走的，在行走间寻找可行性。</p><p>​如果在夏天，你看见一个法国作家，在街上走路或坐在咖啡厅发呆，他的脑中，可能正在孕育著下一个关于台湾的小说，如那些飘洋过海的文物，等待有人说出它们的故事。</p>
