--- a/_posts/2022-08-13-PQ-報呱全世界-ep119-台語配音停看聽-ft.-陳豐惠.html
+++ b/_posts/2022-08-13-PQ-報呱全世界-ep119-台語配音停看聽-ft.-陳豐惠.html
@@ -21,7 +21,7 @@ author: 編輯室
 
 
 <figure class="wp-block-embed is-type-rich is-provider-spotify wp-block-embed-spotify wp-embed-aspect-21-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Spotify Embed: 【報呱全世界】EP119 台語配音停看聽  ft. 陳豐惠" style="border-radius: 12px" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" src="https://open.spotify.com/embed/episode/6uqfWNDA4JAcDPpRvyvrLS?utm_source=oembed"></iframe>
+<iframe loading="lazy" title="Spotify Embed: 【報呱全世界】EP119 台語配音停看聽  ft. 陳豐惠" style="border-radius: 12px" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" src="https://open.spotify.com/embed/episode/6uqfWNDA4JAcDPpRvyvrLS?utm_source=oembed"></iframe>
 </div></figure>
 
 
