--- a/_posts/2022-08-14-VOCUS-色厲內荏遇上眾目睽睽-pelosi訪台的一連串畫面意象.html
+++ b/_posts/2022-08-14-VOCUS-色厲內荏遇上眾目睽睽-pelosi訪台的一連串畫面意象.html
@@ -8,4 +8,34 @@ tags: blog
 author: 關間聞
 ---
 
-<p><br></p>
+<blockquote>子曰：「色厲而內荏，譬諸小人，其猶穿窬之盜也與？」《論語‧陽貨》</blockquote>
+<p>「色厲」，指的是美國眾議院議長佩洛西（Nancy Pelosi）訪台前種種「被擊落」的傳言及威脅。8月伊始，坊間稍為保守謹慎的評論，都認為台海兵凶勢危，有機會開戰。有人苦中作樂，猜想Pelosi如何避過種種危險，登陸台島。當時筆者的猜想是：乘坐潛艇秘密靠近、旋風式會見各方人物數小時、離境後發放訪問錄影……筆者覺得自己的「部署」既隱蔽，亦聰明，穩當可行。</p>
+<img src="https://images.unsplash.com/photo-1616523816559-5fbeba9c0133">
+<p>那料到，「眾目睽睽」才是她的選項：事前高調宣佈訪台行程；專機8月2日離開吉隆坡後，沒有令自己在Flightradar(1)上「被屏蔽」，反而任由各地數以十萬計人士追蹤(2)。最教筆者目瞪口呆的是：在生命受到威脅之下，逗留台灣一晚！</p>
+<p>過去的6月30日，領導人訪港。縱使香港這麼安全、處處安心，他依然不願留宿。那一夜小島如此危險，討厭她的群眾近在咫尺，她反而入住酒店？傻的嗎？是過份天真還是老謀深算得太厲害？</p>
+<p>不止如此。8月2日晚，筆者一直盯著外國通訊社的網絡直播，見八十有二的Pelosi帶著一點疲憊，徐徐步入松山機場大樓。再然後？Pelosi車隊從機場出口離開前，網絡直播出現約17分鐘的單調畫面：機場出口外有一位交通警員在指揮交通(3)，大車小車來來往往，只見他獨自一人在指手劃腳，悶得很悶得很……</p>
+<p>等一等，這個畫面合理嗎？事前有各種「擊落」威脅、炸彈恐嚇(4)，為保護來賓，不是應該完全封鎖清空機場附近的道路嗎？再返回7月1日的香港，由於領導人到訪，交通管制十分嚴密(5)，務求滴水不漏。台北市因應Pelosi到訪，同樣有交通管制(6)，但觀乎那17分鐘的悶畫面，台北的交通管制似乎「很遜」。17分鐘內，汽車、的士、巴士、單車、摩托車等仍然絡繹不絕，難度不怕有「壞蛋的車」混雜其中，在機場出口製造事端嗎？為甚麼容許台北市可以較正常地生活運作！傻的嗎？</p>
+<p>但更遜的事，發生在君悅酒店門外。</p>
+<h3>歡迎到訪與請妳滾蛋 混作一團</h3>
+<p>為甚麼這麼多人可以在Pelosi下榻的酒店門外聚集？他們不單有記者，當中有兒童、年輕人、長者 (7)，甚至有示威活動在附近進行(8)！酒店面前的大街，如同上述機場出口對著的大馬路，大車小車熙來攘往，明顯沒有嚴密的交通管制。</p>
+<p>更「過份」的是：當懷疑是Pelosi車隊接近酒店一刻，人群竟然可以一擁而上，跑近車隊喊叫（分不清是歡迎或示威）(9)！雖然在其他網絡影片中，看見酒店門外其實有大批警力佈防，隔開懷疑車隊及人群，但真的不怕發生不愉快的群眾事件嗎？為何不仿傚7月的香港，一不做二不休，把附近街道都幾乎清空了，放置連綿的、比人還要高的水馬（充水式護欄），安全得毫無後顧之憂(10)！</p>
+<p>難道他們全都是粉飾太平的「眾演員」？但如何解析現場附近出現的示威者，例如白狼？可以用甚麼陰謀論辯解嗎？</p>
+<h3>初色厲而終內荏</h3>
+<p>我們毋須視Pelosi是甚麼偉人，台灣的民眾也並非上下齊心，對時局想法彼此南轅北轍(11)，但Pelosi及其團隊的部署，以至台灣官民的從容：不戒嚴不封城、不會見「君悅」而遠之，繼續勞碌生活駕車吵鬧等等，筆者都心存欣賞。同文博客有一篇文章(12)，談及那一夜酒店門外狀況，如此概括：</p>
+<blockquote>“……台灣人依然故我地呼吸着自由的空氣……”</blockquote>
+<p>好一句依然故我！有點任性的味道，令人妒忌又羨慕。</p>
+<p>上述的嘮嘮叨叨，起初因為「色厲」，令我憂心忡忡，卻被「眾目睽睽」一一應對，實屬始料不及。同時期，種種恐嚇卻一一落空，甚至成為笑柄，終於顯露其「內荏」的虛怯本質。</p>
+<p>擱筆之際，那場演習仍在進行中。我們不能輕率地把所有恫嚇都視作色厲內荏，台海仍存在爆發戰爭的危機。惟有祝願台灣人民既步步為營，亦依然故我，勇敢生活。</p>
+<p>註/延伸閱讀：</p>
+<p>(1) 《Flightradar24》 (Wikipedia) https://en.wikipedia.org/wiki/Flightradar24</p>
+<p>(2) 《破292萬人次上線數度當機，裴洛西專機創飛航網站最多人追蹤紀錄》 (TechNews，3/8/2022) https://technews.tw/2022/08/03/over-700-thousand-users-were-following-pelosi-flight-break-flightradar24s-record/</p>
+<p>(3) 由1:26:08至1:43:59，《LIVE: Nancy Pelosi arrives in Taiwan as part of Asia tour after China's warnings over visit》 (YouTube) https://youtu.be/x9UoSQxiHfc</p>
+<p>(4) 《裴洛西訪台前夕桃機公司收到炸彈恐嚇信 航警局加強飛安檢查》 (自由時報，2/8/2022) https://news.ltn.com.tw/news/politics/breakingnews/4011746</p>
+<p>(5) 《【習近平訪港】灣仔北及港島多處封路改道 一文看清交通安排》 (經濟日報，28/6/2022) https://topick.hket.com/article/3288197/【習近平訪港】灣仔北及港島多處封路改道%E3%80%80一文看清交通安排</p>
+<p>(6) 《裴洛西訪台今拜會立院 台北市周遭「交管、公車改道資訊」看這裡》 (上報，3/8/2022) https://www.upmedia.mg/news_info.php?Type=24&SerialNo=150735</p>
+<p>(7) 同(3)，由1:46:35至1:54:00</p>
+<p>(8) 《抗議民眾聚集君悅飯店 白狼遭二度驅離》 (YouTube) https://youtu.be/QKl9D_AFYaM</p>
+<p>(9) 同(3)，由1:54:01至1:59:31，尾段有部份畫面失去</p>
+<p>(10) 《為確保習近平來港人身安全 警方封灣仔北一帶道路、關會展站》 (明報，29/6/2022) https://www.mpweekly.com/culture/回歸25周年-回歸封路-灣仔封路-206118</p>
+<p>(11) 《台灣民眾為什麼對中國軍事威脅「冷靜」「無感」？BBC分析三大原因》 (風傳媒，10/11/2021) https://www.storm.mg/article/4038621?mode=whole</p>
+<p>(12) 《Pelosi訪台再次證明多元的社會雖帶來百種異見聲音 卻是民主本質的體現》 (同文Commons，3/8/2022) https://commonshk.com/2022/08/03/pelosi訪台再次證明多元的社會雖帶來百種異見聲音-卻/</p>
