--- a/_posts/2022-08-14-PQ-你不知道的北韓-80層摩天住宅最受歡迎的居然是低樓層.html
+++ b/_posts/2022-08-14-PQ-你不知道的北韓-80層摩天住宅最受歡迎的居然是低樓層.html
@@ -13,7 +13,7 @@ author: Irin
 
 
 <figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="Kim Jong Un on Inaugural Ceremony of Songhwa Street" src="https://www.youtube.com/embed/NA4Rt59IEbw?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="Kim Jong Un on Inaugural Ceremony of Songhwa Street" src="https://www.youtube.com/embed/NA4Rt59IEbw?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>平壤松花街住宅竣工儀式在今年4月11日舉行。</figcaption></figure>
 
 
