--- a/_posts/2022-08-14-INMEDIA-卓永興巡視後巷衞生黑點-指將視乎需要加裝閉路電視.html
+++ b/_posts/2022-08-14-INMEDIA-卓永興巡視後巷衞生黑點-指將視乎需要加裝閉路電視.html
@@ -8,13 +8,16 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/2022081404.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府啟動打擊衞生黑點計劃，政務司副司長卓永興早上到後巷衞生黑點視察後見記者，指政府在維持香港清潔責無旁貸，「但如果政府不斷清，市民不斷掉，我哋只會不斷喺你清我掉嘅夢魘之中不斷輪迴。」他表明，當局將視乎需要在街上加裝閉路電視，指現時有300多部監察的電視，對監察衞生情況十分有效。</p>
+<img src="https://www.inmediahk.net/files/column_images/2022081404.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府啟動<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E5%89%AF%E5%8F%B8%E9%95%B7%E7%8E%87%E9%A0%98%E6%89%93%E6%93%8A%E8%A1%9E%E7%94%9F%E9%BB%91%E9%BB%9E-%E5%9D%91%E6%B8%A0%E8%93%8B%E8%8B%B1%E6%96%87%E8%80%83%E8%B5%B7%E5%8D%93%E6%B0%B8%E8%88%88">打擊衞生黑點計劃</a>，政務司副司長卓永興早上到後巷衞生黑點視察後見記者，指政府在維持香港清潔責無旁貸，「但如果政府不斷清，市民不斷掉，我哋只會不斷喺你清我掉嘅夢魘之中不斷輪迴。」他表明，當局將視乎需要在街上加裝閉路電視，指現時有300多部監察的電視，對監察衞生情況十分有效。</p>
 <p>卓永興又呼籲，市民由今日起須處理好自己的垃圾，「大家必須處理好自己嘅垃圾，香港人嘅垃圾，香港人自己唔清理，邊個幫你清理呢？」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/28T89P41Mj" title="6A80C06284CC46BEA219B1E15B4A9025_O"><img src="https://live.staticflickr.com/65535/52284521541_04348f48ce_b.jpg" width="1024" alt="6A80C06284CC46BEA219B1E15B4A9025_O" /></a><br /><em>政府新聞處圖片</em></p>
 <p><strong>塘尾道後巷視察 卓永興斥市民胡亂棄置電單車</strong></p>
-<p>政府日前宣布今日起展開為期三個月的打擊衞生黑點計劃，針對全港600多個衞生及街道管理黑點，打擊垃圾棄置，及成立夜間滅鼠隊。卓永興與環境及生態局局長謝展寰等同屬地區事項統籌工作組的官員，到塘尾道一帶的後巷視察，他們身穿印有「我哋做得到」的Polo Shirt。</p>
+<p>政府日前宣布今日起展開為期三個月的打擊衞生黑點計劃，針對全港600多個衞生及街道管理黑點，打擊垃圾棄置，及成立<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E8%A8%AD%E7%AB%8B19%E6%94%AF%E5%A4%9C%E9%96%93%E6%BB%85%E9%BC%A0%E9%9A%8A-%E5%8D%93%E6%B0%B8%E8%88%88%E7%A8%B110%E6%9C%88%E6%B1%BA%E5%AE%9A%E6%8D%95%E9%BC%A0kpi">夜間滅鼠隊</a>。卓永興與環境及生態局局長謝展寰等同屬地區事項統籌工作組的官員，到塘尾道一帶的後巷視察，他們身穿印有「我哋做得到」的Polo Shirt。</p>
 <p>油尖旺民政事務專員余健強在場迎接，他指今日行動可清理數部廢棄電單車。卓永興斥市民胡亂棄置電單車，更反問：「點解啲人咁鍾意攞架車喺後巷度？攞去劏咗佢都唔係咁難啫？」余健強稱：「係啦。」他解釋指，地政總署已賦權運輸署發出告示，車主在限期前，即翌日如不清走廢棄電單車，當局將會清走。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/10nDE2P44o" title="5380F5D013EE41B9BC13C6F355281CAD_O"><img src="https://live.staticflickr.com/65535/52284529973_a325668e16_b.jpg" alt="5380F5D013EE41B9BC13C6F355281CAD_O" /></a><br /><em>政府新聞處圖片</em></p>
 <p><strong>有市民盆栽放戶外  卓永興批當後巷成後花園</strong></p>
 <p>在巡視後巷的時候，卓永興指向渠上的招紙，「呢個人兄呢，呢個通渠王貼晒呢啲咁嘅嘢喺度，呢個都係違法㗎喎，打個電話俾佢話俾佢聽已經違法，亂咁整到一塊塊膏藥咁喺度。」他批評有市民將盆栽放到戶外，「個個整個後花園喺度咁樣樣，鍾意盆栽自己喺室內擺呀嘛。」</p>
 <p>在經過渠蓋的時候，卓永興即時對謝展寰說，「呀CW，呢個就係嗰個我哋記招講嘅渠蓋！」謝展寰補充說：「坑渠蓋！」在官員視察期間，有清潔工正搬走被棄置的電單車，卓永興又指向牆上的字句「嚴禁倒垃圾，送官究治，但佢竟然太歲頭上動土！」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8Qj0bJAM12" title="0A174D8BF4B04D31BF5D82C39F1CC3A3_O"><img src="https://live.staticflickr.com/65535/52284788384_d2a2200bf2_b.jpg" width="1024" alt="0A174D8BF4B04D31BF5D82C39F1CC3A3_O" /></a><br /><em>政府新聞處圖片</em></p>
 <p>在巡視油尖旺的後巷後，卓永興下午將與民政及青年事務局局長麥美娟到九龍城視察「三無」大廈，再到深水埗與發展局局長甯漢豪查看有危險的招牌。卓永興表示，當局歡迎市民提供其他衞生黑點，當局會持續改善環境衞生，指當局會考慮修改相關罰則。</p>
 </div></div></div>
