--- a/_posts/2022-08-15-INMEDIA-冠忠南區逾800萬班費力爭前四-陳文俊-點同傑志理文比.html
+++ b/_posts/2022-08-15-INMEDIA-冠忠南區逾800萬班費力爭前四-陳文俊-點同傑志理文比.html
@@ -25,5 +25,5 @@ author: 獨媒報導
 <p><strong>艾華重返港超聯盼贏冠軍</strong></p>
 <p>曾效力香港飛馬及南華的艾華則由港甲高力北區來投，相隔兩年再重返港超聯，他直言想爭取首個港超聯冠軍。他解釋，南區亦是其中一間大球會，去季亦踢出成績，所以選擇加盟。他又指，職業足球的港超聯與港甲水平有一段距離，但自己每日都有訓練，感覺十分好。現時31歲的艾華已申領特區護照，有望年內成為本地球員，他指夢想可代表港隊比賽，會努力表現爭取港足徵召。</p>
 <p><strong>預告港超聯賽會本周成立</strong></p>
-<p>今季港超聯將加入深水埔及和富大埔兩支區隊，參賽球隊數目增至10隊，陳文俊坦言是好事：「希望多啲人有意欲參加比賽先，唔好年年都囈今年得8隊、6隊、4隊」。他亦「預告」今周六將舉辦港超聯賽會成立記者會，早前建議的增加聯賽獎金及增設足總盃獎金，及試行「平分票房」已獲足總董事局通過，細節會於會上交代。他直言賽會目標是「大搞」港超聯，理想是每年都尋找到3,000萬元贊助。</p>
+<p>今季港超聯將加入深水埗及和富大埔兩支區隊，參賽球隊數目增至10隊，陳文俊坦言是好事：「希望多啲人有意欲參加比賽先，唔好年年都翳今年得8隊、6隊、4隊」。他亦「預告」今周六將舉辦港超聯賽會成立記者會，早前建議的增加聯賽獎金及增設足總盃獎金，及試行「平分票房」已獲足總董事局通過，細節會於會上交代。他直言賽會目標是「大搞」港超聯，理想是每年都尋找到3,000萬元贊助。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
