Update VOCUS 2022-08-16 patch

--- a/_posts/2022-08-15-VOCUS-一萬個叢林夜-我的命令未解散.html
+++ b/_posts/2022-08-15-VOCUS-一萬個叢林夜-我的命令未解散.html
@@ -45,4 +45,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/b01d561c-7e8e-458d-9a24-a78cbd6d30b2.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">這部電影雖然聽上去覺得是一個荒謬或是上一個世代的故事，但如今就算網路發達或是資訊傳播快速，我認為有時候當一個人已經根深蒂固的接受了一種聲音和思考邏輯，即便當有人告知他事實與真相，他依舊選擇相信自己所認為是真的那一方言論，如今許多中國小粉紅就如同當年這些帝國主義的軍人一樣，深信著自己相信著，並且到今還不斷打一場自我抗爭。</div>
 <div class="draft-block draft--p left">整體來說，這是一部真人真事讓人開心不起來的戰後鬧劇，不管對於堅信自己任務日本未往的小野田一行人、或是在島上被傷害的居民，這二戰所留下的傷害是持續的，這也是為何世界持續反對戰爭的原因，但有些人似乎不是忘了戰爭帶來的痛，卻是只看見自己的權與益．不斷貪念著玉璽王位。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/RqnKJMHv2Eg"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/RqnKJMHv2Eg"></iframe></div>
