--- a/_posts/2022-08-15-VOCUS-方格子電台-podcast-ep22-讀書從自己做起.html
+++ b/_posts/2022-08-15-VOCUS-方格子電台-podcast-ep22-讀書從自己做起.html
@@ -8,4 +8,16 @@ tags: blog
 author: 王立第二戰研所
 ---
 
-<p><br></p>
+<p>第二季EP.22已上線 每週一更新：時事議題、軍事常識、台海關係⋯都在最新一集<a href="https://reurl.cc/KQQ5R9">《王立第二戰研所》</a>！</p>
+<img src="https://images.vocus.cc/c8be9a46-c3be-4363-ba77-913c16c4e3b2.png" alt="|Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽|">
+<figcaption class="imageCaption" style="cursor: text; display: inline-block; margin-top: 15px;">|Apple podcast、Sound on、KKBOX、Spotify、Google podcast、Firstory⋯⋯各大平台皆可收聽|</figcaption>
+<p>點此用喜歡的方式收聽節目▶︎▷<a href="https://reurl.cc/KQQ5R9">《方格子電台-王立第二戰研所》</a></p>
+<blockquote>本集更新 EP22：讀書從自己做起</blockquote>
+<p>新番內容：</p>
+<p>讀書的動機？</p>
+<p>◆求知慾🔥 發自內心為了自己讀書</p>
+<p>怎麼作筆記？</p>
+<p>◆試圖用自己的話表達，整理自己的思緒</p>
+<p>◆不用擔心對或錯</p>
+<p>==========</p>
+<p>這集要分享一些經歷，讓爸爸媽媽學怎麼讀書。教育業待久了，可以提供一些比較平實的作法。上一集的教育單元有提到爸爸媽媽有在讀書，小孩才跟著讀。要怎麼讀？作筆記很重要，我都會把自己的一些想法寫下來。在講怎麼做之前，我也先跟各位提一下，為什麼讀書是很有益的？不是只有小朋友而已，對於家長自己，讀書也是很有益的事情。人慢慢活得越來越大之後，總要找些興趣...</p>
