--- a/_posts/2022-08-15-PQ-緬甸正義組織揭百家企業向緬甸軍方提供軍武-翁山蘇姬再加判6年徒刑.html
+++ b/_posts/2022-08-15-PQ-緬甸正義組織揭百家企業向緬甸軍方提供軍武-翁山蘇姬再加判6年徒刑.html
@@ -20,7 +20,7 @@ author: 蔡侯塞
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-1024x472.jpg" alt="" class="wp-image-79157" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-1024x472.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-300x138.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-768x354.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-1536x708.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>緬甸軍政府持續使用暴力鎮壓異己，已引起東協各國不滿。<br>圖／The Irrawaddy</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-1024x472.jpg" alt="" class="wp-image-79157" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-1024x472.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-300x138.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-768x354.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o-1536x708.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2021/10/64803961-fbttje7wyaqjx3o.jpg 1920w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>緬甸軍政府持續使用暴力鎮壓異己，已引起東協各國不滿。<br>圖／The Irrawaddy</figcaption></figure></div>
 
 
 
