--- a/_posts/2022-08-16-INMEDIA-大律師吳宗鑾憂初選案拖延-或消磨部分被告抗辯動力.html
+++ b/_posts/2022-08-16-INMEDIA-大律師吳宗鑾憂初選案拖延-或消磨部分被告抗辯動力.html
@@ -13,6 +13,7 @@ author: 獨媒報導
 <p><strong>警方有能力監控言論 應予保釋</strong></p>
 <p>他指出當初有47名被告向法庭提出保釋，法官關注即使被告聲稱保釋後不會繼續危害國家安全，但警方不可能廿四小時監察，最終成為不給予保釋的理據之一。然而，部分成功取得保釋的被告，及後被指控違反保釋條件而被撤銷保釋，「似乎警方又真係留意住（言論）」，他認為警方對被告人的一舉一動和言行，都有能力長時間監察。</p>
 <p>他續指過往警方在其他刑事案，對被告的監控能力都很強，反問「驚咩啫，畀佢（47人案被告）保釋囉」，尤其47人案被告的案件不涉及使用暴力。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/6H0X43Lt61" title="299209373_10224974966376230_3750069269695259292_n"><img src="https://live.staticflickr.com/65535/52288904557_b9a3bab26d_b.jpg" alt="299209373_10224974966376230_3750069269695259292_n" /></a><br /><em>劉慧卿Facebook 圖片</em></p>
 <p><strong>有被告或現「抗辯落去再無意義」念頭</strong></p>
 <p>主持人劉慧卿多次追問，吳宗鑾是否認為「法治已死」。吳宗鑾認為「未去到呢個位」，但他關注近年有案件，拖延程度或影響部分被告的抗辯決定，「抗辯落去再無意義，已經困咗咁耐」，部分案件的拖延時間甚至已超出了刑罰的最高上限。</p>
 <p>部分被還柙的被告或感到，「你又唔畀我答辯，又唔畀我認罪，又唔畀我保釋」，一有最早答辯的機會，便決定「是旦啦，我哋認咗罪，快啲出返嚟」。劉慧卿問他這情況是否在47人案出現，吳宗鑾認為案件的拖延程度，有機會令被告減少動力和誘因抗辯，儘管有被告在案件開始時打算抗辯，但現在或改變想法，「快啲認咗佢算」，若該情況出現會將是十分可悲。</p>
