Update VOCUS 2022-08-18 patch

--- a/_posts/2022-08-17-VOCUS-中年失戀日記-交往17年後突然獨身.html
+++ b/_posts/2022-08-17-VOCUS-中年失戀日記-交往17年後突然獨身.html
@@ -44,4 +44,4 @@ author: 陸坡 (LUPO)
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/71ab49bc-576f-4cbc-9644-3e271a3ccdc9.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">故我覺得媒體會把比喻為中年同志版的《慾望城市》，似乎也不是沒有道理的，不管這是褒、還是貶，光是《中年失戀日記》主角麥克住的公寓坐落地區，就被很多人吐槽說是在曼哈頓有名的且最昂貴、還有著住戶私人封閉式公園，且與許多明星為鄰居，但劇中還強行說是普通小公寓，瞬間讓人有種《小時代》電影幾個哭窮的新鮮人住超大超豪華租物的即視感。</div>
 <div class="draft-block draft--p left">但《中年失戀日記》是以同志中年後單身為發想，衍伸出來各種誇張誇大的笑點，中間也帶出不管是直男、直女或性少數族群，每個人的中年危機其實都是一樣的，尤其在使用交友平台更是會讓人嘆氣。撇開那些過於細節與和真實同志生活不同的高檔中年同志故事，享受劇中一段浪漫的失戀獲得趣味和反思，也都比過度較真要來的讓中年男同大叔們輕鬆愉快。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/KMT4pVK-uFo"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/KMT4pVK-uFo"></iframe></div>
