--- a/_posts/2022-08-17-PQ-救國團否認是國民黨附隨組織-黨產會拿出機密文件打臉.html
+++ b/_posts/2022-08-17-PQ-救國團否認是國民黨附隨組織-黨產會拿出機密文件打臉.html
@@ -28,7 +28,7 @@ author: 霍布斯潘
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/531764c8-黨產會公布秘密文件。圖／黨產會臉書.jpg" alt="" class="wp-image-111423" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/531764c8-黨產會公布秘密文件。圖／黨產會臉書.jpg 629w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/531764c8-黨產會公布秘密文件。圖／黨產會臉書-217x300.jpg 217w" sizes="(max-width: 629px) 100vw, 629px" /><figcaption>黨產會公布秘密文件。圖／黨產會臉書</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/531764c8-黨產會公布秘密文件。圖／黨產會臉書.jpg" alt="" class="wp-image-111423" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/531764c8-黨產會公布秘密文件。圖／黨產會臉書.jpg 629w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/531764c8-黨產會公布秘密文件。圖／黨產會臉書-217x300.jpg 217w" sizes="(max-width: 629px) 100vw, 629px" /><figcaption>黨產會公布秘密文件。圖／黨產會臉書</figcaption></figure></div>
 
 
 
