--- a/_posts/2022-08-18-PQ-國防院民調-裴洛西訪台後-半數民眾認美國會出兵助台.html
+++ b/_posts/2022-08-18-PQ-國防院民調-裴洛西訪台後-半數民眾認美國會出兵助台.html
@@ -12,7 +12,11 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-1024x581.png" alt="" class="wp-image-111566" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-1024x581.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-300x170.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-768x436.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08.png 1200w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民眾對美國出兵協防台灣態度之變化趨勢／圖：國防安全研究院。</figcaption></figure></div>
+<p>民調顯示受到俄國入侵烏克蘭之後，美國沒有「直接」介入，台灣民眾認為美國不會出兵高於會出兵；反觀，裴洛西來台訪問、中共對台周邊發動圍島式軍演，民調則顯示，台灣民眾則認為美國會出兵高於不出兵。</p>
+
+
+
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-1024x581.png" alt="" class="wp-image-111566" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-1024x581.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-300x170.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08-768x436.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/6df2e205-c3dd-4754-a3c6-df392775da08.png 1200w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民眾對美國出兵協防台灣態度之變化趨勢／圖：國防安全研究院。</figcaption></figure></div>
 
 
 
@@ -52,15 +56,15 @@ author: 林志鴻
 
 
 
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-1024x581.png" alt="" class="wp-image-111568" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-1024x581.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-300x170.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-768x436.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2.png 1200w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民眾對國軍防衛台灣能力信心之變化趨勢／圖：國防安全研究院。</figcaption></figure></div>
+
+
+
 <p>調查顯示，約 51% 民眾主張現階段維繫國家安全最重要作法是「強化自身國防戰力」；18% 認為要「與美國緊密結盟」，23% 則選擇「對中國大陸釋出善意」。</p>
 
 
 
 <p>國防院研究指出，此次民調調查對象是台灣（不含金門、馬祖）年滿 20 歲以上者，訪問完成 1075 份樣本，樣本經加權檢定後與母體無顯著差異，足以代表全國公民意見，以 95% 之信心水準估計，最大可能隨機抽樣誤差為 ±2.99%。</p>
-
-
-
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-1024x581.png" alt="" class="wp-image-111568" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-1024x581.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-300x170.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2-768x436.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/08/bc5f4403-3fd4-4c12-b88e-9abe45787aa2.png 1200w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>民眾對國軍防衛台灣能力信心之變化趨勢／圖：國防安全研究院。</figcaption></figure></div>
 
 
 
