--- a/_posts/2022-08-18-INMEDIA-初選47人案-長達139頁案情曝光-指戴耀廷5人為主要組織者-趙家賢個別行為無另闢一節.html
+++ b/_posts/2022-08-18-INMEDIA-初選47人案-長達139頁案情曝光-指戴耀廷5人為主要組織者-趙家賢個別行為無另闢一節.html
@@ -61,11 +61,11 @@ author: 獨媒報導
 <p>就協助籌辦的民動，案發時趙家賢是召集人、鍾錦麟是副召集人，譚文豪和尹兆堅是委員。案情指民動為初選提供平台，協調有意參選人士，招募義工、為眾籌宣傳，並準備所有器材及流程安排，包括7月頭為初選180名義工舉行簡介會。而從趙家賢辦公室搜得的〈2019-2020工作報告〉可見，民動除了是泛民政治平台，亦常向外國勢力尋求協助或關注，散播對政府行政和立法機關的不滿。</p>
 <p>趙家賢、鍾錦麟，和同案被捕但無被控的律師關尚義，是民動恆生銀行戶口的簽署人，透過網上眾籌平台「GoGetFunding」等為初選眾籌共348萬元。款項在趙家賢和關尚義同意下可動用，民動並將提供的服務名為「製作及宣傳服務」，細分為「提名及核實」、「投票計劃及實行」、「傳媒論壇製作」、「宣傳：廣播軟件、網站、報章、Facebook」、「服務站運作及管理」及「結果點算及公布」，民動就服務向參選人派發收據，但他們不需繳費。警方並從趙的辦公室搜得提名表格等文件。</p>
 <p><strong>戴耀廷、區諾軒、趙家賢等5人為主要組織者</strong></p>
-<p>案情又列出所有認罪被告的個別行為，但並沒有為趙家賢另闢一節。案情指，戴耀廷、區諾軒、趙家賢、鍾錦麟和吳政亨5人為初選「主要組織者」。戴、區和趙組織、執行及公開宣揚35+計劃，嘗試為其合法性辯護，並負責不同範疇，如戴耀廷協調簽署協議和投票安排；區諾軒協助舉行選舉論壇；趙家賢透過民主動力執行初選。</p>
+<p>案情又列出所有認罪被告的個別行為，但並沒有為趙家賢另闢一節。案情指，戴耀廷、區諾軒、趙家賢、鍾錦麟和吳政亨5人為初選「主要組織者」。戴、區和趙組織、執行及公開宣揚35+計劃，嘗試為其合法性辯護，並負責不同範疇，如戴耀廷協調簽署協議和投票安排；區諾軒協助舉行選舉論壇；趙家賢透過民主動力執行初選。吳則發起「三投三不投」聯署。</p>
 <p>3人亦經常討論如何將計劃落實，例如提交提名表格的方法和死線、應否接受黃碧雲的教名加在選票、還柙人士能否參與初選、初選會否構成聚集和相應措施等。趙家賢曾草擬提名表格，獲戴和區給意見，戴和區亦經常就尋找合適票站作討論。</p>
 <p><strong>戴耀廷選舉延期後設Patreon 區諾軒為初選論壇主要協調者</strong></p>
-<p>戴耀廷7月29日開設Patreon，於立法會選舉已延後的7月至12月期間上載文章和片段，明確宣揚初選、35+及反對國安法，又宣揚繼續反抗「獨裁政權」。</p>
-<p>區諾軒則是初選論壇的主要協調者，定下論壇流程，並將論壇錄影和播放時間表發給戴耀廷、區諾軒和趙家賢，又親赴錄影地點壹傳媒大樓視察。他曾向3人發放邀請參選人參加論壇的訊息作考慮，並曾透過4個協辦媒體傳送名為〈35+論壇須知〉的文件，列明各參選人須遵守的規則。</p>
+<p>除了發文宣傳並籌辦初選，戴耀廷被指7月29日開設Patreon，於立法會選舉已延後的7月至12月期間上載文章和片段，明確宣揚初選、35+及反對國安法，又宣揚繼續反抗「獨裁政權」。</p>
+<p>區諾軒則是初選論壇的主要協調者，定下論壇流程，並將論壇錄影和播放時間表發給戴耀廷、區諾軒和趙家賢，又親赴錄影地點壹傳媒大樓視察。他曾向3人發放邀請參選人參加論壇的訊息作考慮，並曾透過4個協辦媒體傳送名為〈35+論壇須知〉的文件，列明各參選人須遵守的規則，亦負責籌備記者會。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/GBmw7S0jDY" title="DSC_0107"><img src="https://live.staticflickr.com/65535/50246674041_0a766ff4f9_b.jpg" width="1024" alt="DSC_0107" /></a><br /><em>鍾錦麟</em></p>
 <p><strong>鍾錦麟作混合式供詞 透露20年初戴耀廷與民動開會 </strong></p>
 <p>鍾錦麟沒有參選，但被指為戴、區和趙3人提供協助，參與組織初選的關鍵部分如財政、流程和宣傳，並以民動副召集人和西貢區議會主席身分協助，如在民動專頁發文宣傳初選，及於西貢尋找票站和提供議辦作票站。他曾於6月中告知戴及區已找到100個票站，預計將有200個。</p>
